--- a/style.css
+++ b/style.css
@@ -1,30 +1,104 @@
-body{
-    color: white;
-    background-color: black;
-    font-family: Arial, Helvetica, sans-serif;
+@font-face {
+    font-family: 'Saira';
+    src: url(fontes/SairaStencilOne-Regular.ttf) format('opentype');
+    font-weight: normal;
 }
-ul{
+
+:root{
+    --cor0: #696767;
+    --cor1: #62eb84;
+    --cor2: white;
+    --cor3: #eeeded;
+    --cor4: #a09e9e;
+    --cor5: #000000;
+    --fontes-padrao: Arial, Verdana, Helvetica, sans-serif ;
+    --F1: 'PressStart';
+    --F2: 'Saira';
+}
+
+body{
+    color: var(--cor5);
+    background-image: linear-gradient(32deg, var(--cor5),var(--cor0));
+    font-family: var(--fontes-padrao);
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
+
+header{
+    background-color: var(--cor0);
+    color: var(--cor1);
+    width: 100%;
+    min-height: 50px;
+    padding: 20px 0px;
     display: flex;
     justify-content: space-between;
-    list-style-type: none;
-    align-items: center;
-    padding: 16px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.555);
+    font-family: var(--F2);
+    font-size: 1.8em;
 }
 
-a{
-    color: white;
+header > nav > a{
+    text-align: center;
+    margin: 20px;
+    color: var(--cor2);
     text-decoration: none;
+    padding: 8px;
+    border-radius: 10px;
 }
 
-header img{
+header > nav > a:hover {
+    color: var(--cor5);
+    background-color: var(--cor1);
+    transition-duration: 0.5s;
+}
+
+p{
+    text-indent: 0.5em;
+    margin: 3px;
+}
+.center{
+    margin-left: 30px;
+    margin-top: 50px;
+    display: inline-block;
+}
+
+.center > #img{
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 5px solid rgb(102, 228, 102)
+    border: 5px solid var(--cor0);
+    background-image: url(imagens/eu.jpg);
+    background-repeat: no-repeat;
 }
 
-.center{
-    text-align: center;
+.center > #img:hover {
+    background-image: url(imagens/img1-quadrado.jpg);
+}
+
+.titulo{
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-left: 30px;
+}
+.sobre{
+    margin: 10px;
+}
+
+.sobre div{
+    min-width: 400px;
+    max-width: 800px;
+    margin: auto;
+    padding: 5px 15px 15px 15px;
+    background-color: var(--cor4);
+    border-radius: 10px;
+}
+#fundo p{
+    text-indent: 10px;
+}
+footer{
+    display: flex;
+    justify-content: center;
 }
 
 footer img {
@@ -34,12 +108,9 @@ footer img {
     border: 5px solid rgb(255, 255, 255)
 }
 
-footer{
-    display: flex;
-    justify-content: center;
-}
-
 footer a {
+    color: var(--cor3);
+    text-decoration: none;
     margin: 20px;
     text-align: center;
 }
@@ -48,10 +119,40 @@ footer p {
     margin-top: 2px;
 }
 
-.container{
-    padding: 50px;
+@media screen and (max-width: 600px) {
+    header{
+        justify-content: center;
+        font-size: 24px;
+    }
+    header > nav > a{
+        margin: 20px 0px;
+        padding: 5px;
+    }
+    .center {
+        position: relative;
+        width: 100%;
+        height: 150px;
+        margin: 0px;
+        padding: 30px 0px;
+    }
+    .center img{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%) ;
+    }
+    .sobre div{
+        min-width: 100px;
+        width: 90%;
+        margin: auto;
+        padding: 10px;
+    }
 }
-
-nav a:hover {
-    color: green;
+@media screen and (min-device-height: 800px){
+    #corpo{
+        margin: 0px;
+        padding: 0px;
+        border: 0px;
+        height: 100vh;
+    }
 }
