--- a/style_projetos.css
+++ b/style_projetos.css
@@ -1,9 +1,20 @@
-div#escrita{
+@font-face {
+    font-family: 'PressStart';
+    src: url(fontes/PressStart2P-Regular.ttf) format('opentype');
+    font-weight: normal;
+}
+
+body{
+    min-height:100vh;
+}
+
+#escrita{
     font: 200pt;
+    min-height: 100;
     max-width: 480px;
     text-align: center;
     margin: 60px auto;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'PressStart';
     color: #fff;
 }
 
@@ -22,51 +33,4 @@ div#escrita{
     50%{
         opacity: 0;
     }
-}
-
-body{
-    color: white;
-    background-color: black;
-    font-family: Arial, Helvetica, sans-serif;
-}
-ul{
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    align-items: center;
-    padding: 16px;
-}
-
-a{
-    color: white;
-    text-decoration: none;
-}
-
-footer img {
-    width: 30px;
-    height: 30px;
-    border-radius: 30%;
-    border: 5px solid rgb(255, 255, 255)
-}
-
-footer{
-    display: flex;
-    justify-content: center;
-}
-
-footer a {
-    margin: 20px;
-    text-align: center;
-}
-
-footer p {
-    margin-top: 2px;
-}
-
-.container{
-    padding: 50px;
-}
-
-nav a:hover {
-    color: green;
 }
