--- a/style_projetos.css
+++ b/style_projetos.css
@@ -10,6 +10,12 @@
     --F2: 'Saira';
 }
 
+#nav_projeto {
+    color: var(--cor5);
+    background-color: var(--cor1);
+    transition-duration: 0.5s;    
+}
+
 *{
     color: white;
 }
@@ -32,6 +38,12 @@ body{
     background-size: cover;
 }
 
+#parceiros{
+    background-image: url(imagens/aperto-de-mao-2000px.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .project{
     padding: 5px;
     text-align: center;
@@ -61,28 +73,4 @@ body{
 .project img{
     height: 100px;
     width: 100px;
-}
-
-#escrita{
-    color: var(--cor5);
-    min-height: 100px;
-    max-width: 480px;
-    margin: auto;
-}
-
-#escrita::after{
-    text-align: center;
-    content: '|';
-    margin-left: 5px;
-    opacity: 1;
-    animation: pisca .7s infinite  ;
-}
-
-@keyframes pisca {
-    0%,100%{
-        opacity: 1;
-    }
-    50%{
-        opacity: 0;
-    }
 }
